--- a/L2Earn.Domain/L2Earn.Domain.csproj
+++ b/L2Earn.Domain/L2Earn.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="StronglyTypedId" Version="1.0.0-beta08" />
+    </ItemGroup>
+
 </Project>
